# ygo-war-league-discord-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs-deploy.yml  lint.yml
app/: bot.py  config.py  main.py  tree.py
app/cogs/: decks.py  utils.py
app/cogs/decks/: config.py  deck_submission.py  decks.py  models.py  utils.py  view.py  views.py
app/cogs/utils/: utils.py
app/core/: config.py  db.py  exceptions.py  logging.py  models.py  security.py  utils.py  views.py
app/core/deck_imager/: config.py  deck_imager.py  decklist_processor.py  models.py
app/utils/: logging.py
docs/: README.md  astro.config.mjs  pnpm-lock.yaml
docs/src/components/: centered-image.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/app-commands/: enable-deck-submissions.mdx  get-current-week-status.mdx  get-team-submission.mdx  latency.mdx  set-week.mdx  submit-decks.mdx
docs/src/content/docs/bot-commands/: get-team-matchups.mdx  set-season.mdx
docs/src/content/docs/getting-started/: configuration.mdx  installation.mdx  introduction.mdx  overview.mdx  running-the-bot.mdx
docs/src/content/docs/guides/: access-league-data.mdx  get-week-submissions.mdx  league-settings.mdx  submitting-decks.mdx
