[project]
name = "hat-format-discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app/**/*.py"]

[tool.ruff]
target-version = "py312"
include = ["app/**/*.py"]

[tool.uv]
cache-dir=".cache"
